# Linear_Algebra_Pack

./: CMakeLists.txt  README.md  catch_test.cpp  decl.h  eigenvectors_test.cpp  eigvals_example.cpp  functions.h  gauss_run.h  gauss_solve.h  linear_system_solve.h  main.cpp  matrix.h  matrix_multiplication.h  my_main.cpp  new_main.cpp  output.txt  print.h  qr_decomposition.h  qr_eigvals.h  qr_example.cpp  some_qr_examples.cpp  vect.h  vector.h
